<resources>
    <string name="app_name">Board</string>
    <color name="background_theme">#DEF1F0</color>
    <color name="header_theme">#03A5CA</color>
    <string name="password_req">Use 8 or more characters with a mix of uppercase letters, lowercase letters, numbers &amp; symbols</string>
    <string name="btn_go_events">MY EVENTS</string>
    <string name="btn_find_events">EVENT BOARD</string>
    <string name="btn_post_events">POST EVENT</string>
    <string name="btn_rsvp_events">RSVP\'D EVENTS</string>
    <string name="etEventName">Event Name</string>
    <string name="etEventAddress">Address</string>
    <string name="etEventInfo">About</string>
    <string name="etEventDate">Date</string>
    <string name="etEventTime">Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="tvRSVPs">RSVPs</string>
    <string name="tvTheirEvents">THEIR EVENTS</string>

    <string-array name="distances">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
</resources>
