<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostEventActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="426dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_gradient" />

    <EditText
        android:id="@+id/etPostEventTime"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/roboto"
        android:hint="@string/etEventTime"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPostEventAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etPostEventDate" />

    <EditText
        android:id="@+id/etPostEventAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/roboto"
        android:hint="@string/etEventAddress"
        android:inputType="textImeMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/etPostEventDetails"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etPostEventTime" />

    <EditText
        android:id="@+id/etPostEventDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/roboto"
        android:hint="@string/etEventDate"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPostEventTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPostEventName" />

    <EditText
        android:id="@+id/etPostEventDetails"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:gravity="top|left"
        android:hint="@string/etEventInfo"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLength="200"
        android:maxLines="4"
        android:scrollHorizontally="false"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/ivEditUserPhoto"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etPostEventAddress" />

    <Button
        android:id="@+id/btEditChoosePhoto"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="27dp"
        android:text="Choose Photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btPost"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btPost"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="27dp"
        android:text="Post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btEditChoosePhoto"
        app:layout_constraintTop_toBottomOf="@+id/ivEditUserPhoto" />

    <ImageView
        android:id="@+id/ivEditUserPhoto"
        android:layout_width="210dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btPost"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/etPostEventDetails"
        tools:srcCompat="@drawable/ic_panorama_gray_24dp" />

    <EditText
        android:id="@+id/etPostEventName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:maxLength="35"
        android:fontFamily="@font/roboto"
        android:hint="@string/etEventName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etPostEventDate"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivPostShadow"
        android:layout_width="420dp"
        android:layout_height="804dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/cardview_shadow_start_color" />

    <ProgressBar
        android:id="@+id/postProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="250dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/ivPostShadow"
        app:layout_constraintTop_toTopOf="@+id/ivPostShadow">

    </ProgressBar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvPostEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="POST EVENT"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>