<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".HomeActivity">

    <ImageButton
        android:id="@+id/bt_rsvp_events"
        android:layout_width="180dp"
        android:layout_height="117dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_star_black_24dp"
        android:text="@string/btn_rsvp_events"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_find_events" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/btn_rsvp_events"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bt_rsvp_events"
        app:layout_constraintEnd_toEndOf="@+id/bt_rsvp_events"></TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="416dp"
        android:layout_height="129dp"
        android:layout_marginTop="15dp"
        android:elevation="3dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_gradient"
        tools:srcCompat="@drawable/background_gradient" />

    <ImageButton
        android:id="@+id/ibSignout"
        android:layout_width="60dp"
        android:layout_height="90dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="28dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:scaleType="fitCenter"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toStartOf="@+id/btProfile"
        app:layout_constraintTop_toBottomOf="@+id/bt_post_events"
        app:srcCompat="@drawable/ic_logout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="32dp"
        android:elevation="3dp"
        android:fontFamily="@font/roboto"
        android:text="Home"
        android:textColor="@color/cardview_light_background"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvHomeScreen"
        android:layout_width="250dp"
        android:layout_height="117dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="Hello, User"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/bt_find_events"
        android:layout_width="181dp"
        android:layout_height="117dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center|center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/events_board"
        android:text="@string/btn_find_events"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeScreen" />

    <ImageButton
        android:id="@+id/bt_post_events"
        android:layout_width="180dp"
        android:layout_height="117dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/post_event"
        android:text="@string/btn_post_events"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_go_events" />

    <ImageButton
        android:id="@+id/btProfile"
        android:layout_width="180dp"
        android:layout_height="117dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:background="@android:color/background_light"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center|center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:scaleType="fitCenter"
        android:src="@drawable/user_profile_temp"
        android:text="Profile"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_rsvp_events" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:clickable="false"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="PROFILE"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btProfile"
        app:layout_constraintEnd_toEndOf="@+id/btProfile"></TextView>

    <ImageButton
        android:id="@+id/bt_go_events"
        android:layout_width="180dp"
        android:layout_height="117dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@android:color/white"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:scaleType="fitCenter"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/my_events"
        android:text="@string/btn_go_events"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeScreen" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:clickable="false"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/btn_go_events"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bt_go_events"
        app:layout_constraintEnd_toEndOf="@+id/bt_go_events"></TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:clickable="false"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/btn_post_events"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bt_post_events"
        app:layout_constraintEnd_toEndOf="@+id/bt_post_events"></TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:clickable="false"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/btn_find_events"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bt_find_events"
        app:layout_constraintEnd_toEndOf="@+id/bt_find_events"></TextView>


</androidx.constraintlayout.widget.ConstraintLayout>